[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
solana-sdk = "2.1.7"
solana-client = "2.1.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"